# ainotify

./: .gitignore  README.md  main.py  pipeline_main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yaml
app/: config.py  daily_runner.py  example.env  runner.py
app/agent/: base.py  curator_agent.py  digest_agent.py  email_agent.py
app/api/: auth.py  billing.py  channels.py  deps.py  profile.py  schemas.py  security.py  server.py
app/database/: check_connection.py  connection.py  create_tables.py  models.py  mongo.py  repository.py
app/pipeline/: __init__.py  scheduler.py
app/profiles/: user_profile.py
app/scrapers/: anthropic.py  base.py  openai.py  youtube.py
app/services/: base.py  email.py  process_anthropic.py  process_curator.py  process_digest.py  process_email.py  process_youtube.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: layout.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/billing/: page.tsx
frontend/app/dashboard/channels/: page.tsx
frontend/app/dashboard/profile/: page.tsx
frontend/components/landing/: features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  pricing-teaser.tsx  showcase.tsx  testimonials.tsx
frontend/components/ui/: button.tsx  card.tsx  field.tsx  input.tsx  page-header.tsx  section.tsx  spinner.tsx  theme-toggle.tsx
